--- a/figure1.Rmd
+++ b/figure1.Rmd
@@ -3,30 +3,22 @@ title: "Figure1"
 output:
   pdf_document:
     fig_caption: yes
-    toc: yes
+    toc: no
 ---
 
-```{r setup, include=FALSE}
-fn = local({
-  i = 0
-  function(x) {
-    i <<- i + 1
-    paste('Figure', i, ': ', x, sep = '')
-  }
-})
-```
 
-
-```{r loadLib, message=FALSE, warning=FALSE, error=FALSE}
+```{r loadLib, message=FALSE, warning=FALSE, error=FALSE, echo=FALSE}
 ##load the library
 library(motifStack)
-colorSet <- c("Dm"="#00FC00", "b1h"="#00FC00", "sw"="#008080", "bml"="darkgreen", 
-              "Mm"="brown", "MmDREAM"="blue", "Ms"="#F69156", 
-              "Hs"="#D900D9")
+source("safeColor.R")
+colorSet <- c("Dm"="#009E73", "b1h"="#00FC00", "sw"="#008080", "bml"="darkgreen", 
+              "Mm"="#D55E00", "MmDREAM"="blue", "Ms"="#E69F00", 
+              "Hs"="#CC79A7")
 
 ## function to read example data
 readDataDoAna <- function(pcmpath, outpath="output", groupDistance=2.5, trim=0.2){
     pcms <- readPCM(pcmpath)
+    pcms <- safeColor(pcms)
     pfms<-lapply(pcms,pcm2pfm)
     matalign_path <- "./app/matalign-v4a"
     neighbor_path <- "./app/neighbor.app/Contents/MacOS/neighbor"
@@ -51,46 +43,7 @@ readDataDoAna <- function(pcmpath, outpath="output", groupDistance=2.5, trim=0.2
 
 ```
 
-# Fly motifs
-## B1H motifs
-```{r Fly_DNA, fig.width=8, fig.height=11, dpi=72, fig.cap=fn("fly data")}
-gpDis <- 2
-Fly_DNA <- readDataDoAna("pcmsDatasetFly", groupDistance=gpDis)
-attach(Fly_DNA)
-
-leaveNames <- gsub("^Dm_", "", leaves)
-
-motifPiles(phylog=phylog, motifs, sig, col.pfms=gpCol, col.pfms.width=.01, col.pfms2=gpCol, col.pfms2.width=.01, labels.leaves=leaveNames, plotIndex=c(FALSE, TRUE), IndexCex=1, groupDistance=gpDis, clabel.leaves=1)
-
-detach(Fly_DNA)
-```
-
-
-
-# En
-```{r EN, fig.width=8, fig.height=4, dpi=72, fig.cap=fn("En")}
-gpDis <- 2
-EN <- readDataDoAna("pcmsDatasetEn", groupDistance=gpDis)
-attach(EN)
-
-##set methods color
-species <- gsub("^(Dm|Hs|Mm).*?$", "\\1", leaves)
-species[grepl("_M\\d+", leaves) & species=="Mm"] <- "MmDREAM"
-species <- colorSet[species] ##c("Dm/FFS/B1H", "Hs/CIS-BP/SELEX", "Mm/Uniprobe/PBM/\nSeed-And-Wobble")
-
-leaveNames <- gsub("^(Dm|Mm|Hs)_", "", leaves)
-
-motifPiles(phylog=phylog, motifs, r.tree=.5, sig, col.tree=species, col.leaves=species, col.pfms2=gpCol, col.pfms2.width=.01, labels.leaves=leaveNames, plotIndex=TRUE, IndexCex=2, groupDistance=gpDis, clabel.leaves=2)
-legend("topleft", legend=c("Dm/FFS/B1H", "Hs/CIS-BP/SELEX", "Mm/Uniprobe/PBM/\nSeed-And-Wobble", "Mm/CIS-BP/PBM/Dream5"), fill=colorSet[c("Dm", "Hs", "Mm", "MmDREAM")], border="white", lty=NULL, bty = "n", cex=.5)
-
-detach(EN)
-```
-
-
-# Mm vs Mm
-
-## PBM vs SELEX
-```{r MmPBM_SELEX, fig.width=12, fig.height=12, dpi=72, fig.cap=fn("Mouse data from different methods")}
+```{r MmPBM_SELEX, fig.width=12, fig.height=12, dpi=72, fig.cap="Mouse data from different methods", echo=FALSE}
 gpDis <- 2.5
 MmPBM_SELEX <- readDataDoAna("pcmsDatasetMmPBM_SELEX", groupDistance=gpDis)
 attach(MmPBM_SELEX)
@@ -102,16 +55,16 @@ levels(methods) <- colorSet[levels(methods)] ##c("PBM/Uniprobe/Seed-And-Wobble",
 methods <- as.character(methods)
 
 leaveNames <- gsub("_(SELEX|PBM)", "", gsub("_(Jolma|Berger)", "", leaves))
-leaveCol <- ifelse(grepl("Lhx8", leaveNames, ignore.case=TRUE), "red", "black")
+leaveCol <- ifelse(grepl("Lhx8", leaveNames, ignore.case=TRUE), "#D55E00", "#000000")
 
 ## calculate average of top 8 position information content for each motif
 icgp <- sapply(sapply(unaligned.pfms, getIC), function(.ele) mean(sort(.ele, decreasing=TRUE)[1:min(8, length(.ele))]))
 icgp.ranges <- range(icgp)
-icgp <- cut(icgp, 10, labels=colorRampPalette(c("green", "black", "red"))(10))
+icgp <- cut(icgp, 10, labels=colorRampPalette(c("#009E73", "#000000", "#D55E00"))(10))
 icgp.image <- as.raster(matrix(rev(levels(icgp)), ncol=1))
 icgp <- as.character(icgp)
 
-motifCircos(phylog=phylog, pfms=motifs, col.tree.bg=methods, col.tree.bg.alpha=.3, r.rings=c(.1, .1), col.rings=list(icgp, rep("white", length(icgp))), col.inner.label.circle=gpCol, inner.label.circle.width=0.05, labels.leaves=leaveNames, col.leaves=leaveCol, cleaves=.1, r.tree=1, r.leaves=.5, clabel.leaves=.9, motifScale="logarithmic", angle=358, groupDistance=gpDis, plotIndex=TRUE)
+motifCircos(phylog=phylog, pfms=motifs, col.tree.bg=methods, col.tree.bg.alpha=.3, r.rings=c(.1, .1), col.rings=list(icgp, rep("white", length(icgp))), col.inner.label.circle=gpCol, inner.label.circle.width=0.05, labels.leaves=leaveNames, col.leaves=leaveCol, cleaves=.1, r.tree=1, r.leaves=.5, clabel.leaves=.9, motifScale="logarithmic", angle=358, groupDistance=gpDis, plotIndex=TRUE,groupDistanceLineCol='#D55E00')
 
 legend(-2.4, 2.4, legend=c("Mm/Uniprobe/PBM/Seed-And-Wobble", "Mm/CIS-BP/PBM/DREAM5", "Mm/CIS-BP/SELEX"), fill=highlightCol(colorSet[c("Mm", "MmDREAM", "Ms")], .3), border="white", lty=NULL, bty = "n")
 
