--- a/suppFigure5.Rmd
+++ b/suppFigure5.Rmd
@@ -14,7 +14,7 @@ output:
 
 ##Motifs in the HD family are shown in purple (Human/SELEX data), brown (Mouse/PBM data), orange (mouse/SELEX) and turquoise (Fly/B1H data).
 
-##Some of the HD TFs in the SELEX dataset have both monomeric and dimeric motifs. We have aligned the dimeric motif clusters with the associated monomeric motif clusters for the same TFs. Examples of these motif clusters include the ALX1/PHOX2 cluster (Supplementary Figure 5.01), the BarH cluster (Supplementary Figure 5.02), the EMX cluster (Supplementary Figure 5.03), the En/GBX cluster (Supplementary Figure 5.04), the IRX cluster (Supplementary Figure 5.05), the MSX cluster (Supplementary Figure 5.06) and the Cphx cluster (Supplementary Figure 5.07).  Generally, members of a dimeric motif cluster have a monomeric motif that clusters with a fly HD, suggesting that the absence of a fly TF in a dimeric cluster may be a methodological difference rather than a biological one.
+##Some of the HD TFs in the SELEX dataset have both monomeric and dimeric motifs. We have aligned the dimeric motif clusters with the associated monomeric motif clusters for the same TFs. Examples of these motif clusters include the ALX1/PHOX2 cluster (Supplementary Figure 5A), the BarH cluster (Supplementary Figure 5B), the EMX cluster (Supplementary Figure 5C), the En/GBX cluster (Supplementary Figure 5D), the IRX cluster (Supplementary Figure 5E), the MSX cluster (Supplementary Figure 5F) and the Cphx cluster (Supplementary Figure 5G).  Generally, members of a dimeric motif cluster have a monomeric motif that clusters with a fly HD, suggesting that the absence of a fly TF in a dimeric cluster may be a methodological difference rather than a biological one.
 
 ```{r setup, include=FALSE, echo=FALSE}
 library(knitr)
@@ -88,8 +88,10 @@ motifPiles(phylog=.ele$phylog, .ele$motifs,
 
 ```{r plots, results='asis', echo=FALSE}
 sta <- mapply(function(.ele, name, ID, des){
-    TF.name <- gsub("DimerCluster", "", name)
-    kexpand(.ele, id=ID, cap=paste0("Supplementary Figure 5.", TF.name),
+    TF.name <- strsplit(name, ".DimerCluster")[[1]]
+    kexpand(.ele, id=ID, 
+            cap=paste0("__Supplementary Figure 5", 
+                       LETTERS[as.numeric(TF.name[1])], "__: ", TF.name[2]),
             figheight=ceiling(.25*length(.ele$leaves)), des)
 }, matAlignOut, pcmpath, 1:length(pcmpath), description)
 
