--- a/figure1.Rmd
+++ b/figure1.Rmd
@@ -79,14 +79,14 @@ calculateSolidColorFromTransparentColorOverWhite <- function(color, alpha){
 }
 
 setEPS()
-postscript("figure1.eps", width = 6, height = 6)
-motifCircos(phylog=phylog, pfms=motifs, col.tree.bg=calculateSolidColorFromTransparentColorOverWhite(methods, .3), col.tree.bg.alpha=1, r.rings=c(.1, .1), col.rings=list(icgp, rep("white", length(icgp))), col.inner.label.circle=gpCol, inner.label.circle.width=0.05, labels.leaves=leaveNames, col.leaves=leaveCol, cleaves=.1, r.tree=1, r.leaves=.5, clabel.leaves=.45, motifScale="logarithmic", angle=358, groupDistance=gpDis, plotIndex=TRUE, IndexCex=.5, groupDistanceLineCol='#D55E00')
+postscript("figure1.eps", width = 3.5, height = 3.5)
+motifCircos(phylog=phylog, pfms=motifs, col.tree.bg=calculateSolidColorFromTransparentColorOverWhite(methods, .3), col.tree.bg.alpha=1, r.rings=c(.1, .1), col.rings=list(icgp, rep("white", length(icgp))), col.inner.label.circle=gpCol, inner.label.circle.width=0.05, labels.leaves=leaveNames, col.leaves=leaveCol, cleaves=.02, r.tree=1, r.leaves=.65, clabel.leaves=.4, motifScale="logarithmic", angle=358, groupDistance=gpDis, plotIndex=TRUE, IndexCex=.4, groupDistanceLineCol='#D55E00')
 
-legend(-2.4, 2.4, legend=c("Mm/Uniprobe/PBM/Seed-And-Wobble", "Mm/CIS-BP/PBM/DREAM5", "Mm/CIS-BP/SELEX"), fill=calculateSolidColorFromTransparentColorOverWhite(colorSet[c("Mm", "MmDREAM", "Ms")], .3), border="white", lty=NULL, bty = "n", cex = .5)
+legend(-2.45, 2.45, legend=c("Mm/Uniprobe/PBM/Seed-And-Wobble", "Mm/CIS-BP/PBM/DREAM5", "Mm/CIS-BP/SELEX"), fill=calculateSolidColorFromTransparentColorOverWhite(colorSet[c("Mm", "MmDREAM", "Ms")], .3), border="white", lty=NULL, bty = "n", cex = .4, y.intersp = .45)
 
-text(2.05, 2.3, labels="Information Content", cex = .5)
-rasterImage(icgp.image, 2, 1.8, 2.04, 2.2, interpolate = FALSE)
-text(c(2.05, 2.05), c(1.8, 2.2), labels=format(icgp.ranges, digits=3), adj=0, cex = .5)
+text(1.95, 2.3, labels="Information Content", cex = .4)
+rasterImage(icgp.image, 1.89, 1.8, 1.95, 2.2, interpolate = FALSE)
+text(c(1.96, 2.01), c(1.75, 2.2), labels=format(icgp.ranges, digits=3), adj=0, cex = .4)
 dev.off()
 
 detach(MmPBM_SELEX)
